force-app/main/default/objects/Integration_Alert__c/Integration_Alert__c.object-meta.xml
<CustomObject>
    <label>Integration Alert</label>
    <nameField>
        <label>Integration_Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>