force-app/main/default/objects/Integration_Alert__c/fields/AcknowledgedAt__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedAt__c</fullName>
    <label>AcknowledgedAt</label>
    <type>DateTime</type>
</CustomField>