force-app/main/default/objects/Integration_Alert__c/fields/DetectedAt__c.field-meta.xml
<CustomField>
    <fullName>DetectedAt__c</fullName>
    <label>DetectedAt</label>
    <type>DateTime</type>
</CustomField>