force-app/main/default/objects/Integration_Alert__c/fields/EndpointId__c.field-meta.xml
<CustomField>
    <fullName>EndpointId__c</fullName>
    <label>EndpointId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>