force-app/main/default/objects/Integration_Alert__c/fields/Failures_3m__c.field-meta.xml
<CustomField>
    <fullName>Failures_3m__c</fullName>
    <label>Failures_3m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>