force-app/main/default/objects/Integration_Alert__c/fields/MAD_60m__c.field-meta.xml
<CustomField>
    <fullName>MAD_60m__c</fullName>
    <label>MAD_60m</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>