force-app/main/default/objects/Integration_Alert__c/fields/P95_10m__c.field-meta.xml
<CustomField>
    <fullName>P95_10m__c</fullName>
    <label>P95_10m</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>